# anneal

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
anneal/: __init__.py  cli.py  eval_protocol.py  mcp_server.py
anneal/engine/: __init__.py  agent.py  archive.py  bayesian.py  client.py  colab.py  compare.py  context.py  daemon.py  dashboard.py  display.py  environment.py  eval.py  eval_cache.py  knowledge.py  learning_pool.py  notifications.py  policy_agent.py  rate_limiter.py  registry.py  research.py  runner.py  safety.py  scheduler.py  scope.py  search.py  strategy.py  strategy_selector.py  taxonomy.py  tree_search.py  types.py
anneal/suggest/: __init__.py  analyzer.py  generators.py  renderer.py  scanner.py  scope.py  types.py
anneal/templates/: __init__.py  api-latency.toml  code-readability.toml  documentation.toml  prompt-quality.toml  test-coverage.toml
assets/: cover.html  explainer_scene.py  favicon.html
benchmarks/: README.md  bench_false_positives.py  bench_phase2_false_positives.py  bench_phase3_sa_convergence.py  bench_phase5_retrieval_precision.py  bench_retrieval_precision.py  bench_sa_convergence.py  verify_claims.py
benchmarks/analysis/: __init__.py  convergence.py  cost_efficiency.py  loader.py  run_analysis.py  statistics.py  summary.py
benchmarks/raw_results/: B3-greedy-seed1.jsonl  B4-control-seed1.jsonl  B4-greedy-seed1.jsonl  B4-raw-seed1.jsonl  B4-treatment-seed1.jsonl
benchmarks/results/: gate_false_positives.txt  gate_retrieval_precision.txt  gate_sa_convergence.txt  statistical_tests.json  summary_table.md
benchmarks/suite/: config.py  run_suite.py  runner.py  targets.py
docs/: architecture.md  ci-integration.md  complexity-tiers.md  eval-guide.md  features.md  overview.md  pitch.md  recipes.md  system-design.md  token-optimization-analysis.md  use-cases.md
docs/decisions/: 001-git-worktrees-for-isolation.md  002-wilcoxon-over-t-test.md  003-artifact-eval-agent-triplet.md  004-scope-enforcement-design.md
examples/code-golf/: README.md  app.py  eval.sh  expected_output.txt  scope.yaml
examples/code-minify/: README.md  eval.sh  program.md  scope.yaml
examples/prompt-optimizer/: README.md  eval_criteria.toml  scope.yaml  system_prompt.md
examples/skill-diagram/: README.md  SKILL.md  eval_criteria.toml  scope.yaml
examples/test-coverage/: README.md  eval.sh  scope.yaml
experiments/_harness/: __init__.py  base.py  git_setup.py  plotting.py  report.py  types.py
experiments/gate1-guided-search/: config.toml  run.py
experiments/gate2-eval-stability/: config.toml  run.py
experiments/gate3-knowledge-value/: config.toml  run.py
experiments/gate4-multi-domain-stress/: config.toml  run.py
paper/: Makefile  main.tex  references.bib
paper/figures/: architecture.html
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  enhancements.tex  evaluation.tex  introduction.tex  related_work.tex  results.tex  system_design.tex
targets/code-minify/: experiments.jsonl  (+2 more)
tests/: conftest.py  test_adaptive_sampling.py  test_agent_coverage.py  test_agent_selector.py  test_archive.py  test_bayesian.py  test_bootstrap.py  test_client.py  test_component_evolution.py  test_constraints.py  test_context.py  test_context_compression.py  test_decay.py  test_deployment.py  test_drift.py  test_e2e.py  test_environment.py  test_episodic_memory.py  test_eval.py  test_eval_cache.py  test_eval_consistency.py  test_eval_coverage.py  test_eval_engine_cache.py  test_eval_modes.py  test_global_pool.py  test_held_out_eval.py  test_holm_bonferroni.py  test_in_place.py  test_integration_enhancements.py  test_island_search.py  test_knowledge.py  test_learning_pool.py  test_lineage_context.py  test_meta_optimization.py  test_multi_draft.py  test_pareto_viz.py  test_policy_agent.py  test_population_search.py  test_post_mvp_validation.py  test_rate_limiter.py  (+17 more)
(+26 files in other folders)
