[project]
name = "anneal"
version = "0.1.0"
description = "Domain-agnostic autonomous optimization framework"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "openai>=2.28.0",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "filelock>=3.25.2",
    "httpx>=0.28.1",
]

[project.scripts]
anneal = "anneal.cli:main"

[tool.setuptools.packages.find]
include = ["anneal*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
