[project]
name = "anneal-cli"
version = "0.1.1"
description = "Domain-agnostic autonomous optimization framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "openai>=2.28.0",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "filelock>=3.25.2",
    "httpx>=0.28.1",
]

[project.scripts]
anneal = "anneal.cli:main"

[tool.setuptools.packages.find]
include = ["anneal*"]

[project.optional-dependencies]
dashboard = ["aiohttp>=3.13.3"]
ml = ["scikit-learn>=1.5"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real git operations",
    "benchmark: performance benchmark tests (may be slow)",
    "slow: tests that take >5 seconds",
]

[tool.coverage.run]
source = ["anneal"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
