[project]
name = "anneal-cli"
version = "0.4.0"
description = "Domain-agnostic autonomous optimization framework"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "openai>=2.28.0",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "filelock>=3.25.2",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "tomli-w>=1.1",
    # tiktoken: used for accurate token counting in context budget assembly
    # (anneal/engine/context.py). Pulls in Rust binaries on some platforms.
    # A chars/4 heuristic would reduce install friction but sacrifices ~1%
    # accuracy in context window utilization. Kept as core until a lighter
    # alternative is validated.
    "tiktoken>=0.9",
]

[project.scripts]
anneal = "anneal.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anneal*"]

[project.optional-dependencies]
dashboard = [
    "aiohttp>=3.13.3",
    # matplotlib is only used in experiments/_harness/plotting.py and is not
    # imported anywhere in the anneal package itself.
    "matplotlib>=3.9",
]
mcp = ["mcp>=1.9"]
ml = ["scikit-learn>=1.5"]
dev = [
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real git operations",
    "benchmark: performance benchmark tests (may be slow)",
    "slow: tests that take >5 seconds",
]

[tool.coverage.run]
source = ["anneal"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
